--- a/ORBITIX/src/main/java/com/mycompany/orbitix/vista/VistaRegistro.form
+++ b/ORBITIX/src/main/java/com/mycompany/orbitix/vista/VistaRegistro.form
@@ -3,9 +3,6 @@
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
-    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[1360, 677]"/>
-    </Property>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -54,31 +51,26 @@
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" attributes="0">
-                  <EmptySpace pref="127" max="32767" attributes="0"/>
+                  <EmptySpace pref="451" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="102" alignment="1" attributes="0">
+                      <Component id="labelusuarioLOG" alignment="0" min="-2" pref="147" max="-2" attributes="0"/>
+                      <Group type="103" alignment="0" groupAlignment="1" attributes="0">
                           <Component id="labelregistro" min="-2" pref="471" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="762" max="-2" attributes="0"/>
-                      </Group>
-                      <Group type="102" alignment="1" attributes="0">
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="labelusuarioLOG" alignment="0" min="-2" pref="147" max="-2" attributes="0"/>
-                              <Group type="102" alignment="0" attributes="0">
-                                  <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                                      <Component id="txtcontra" alignment="0" max="32767" attributes="0"/>
-                                      <Component id="txtusuario1LOG" alignment="0" pref="207" max="32767" attributes="0"/>
-                                      <Component id="LOG" alignment="0" min="-2" pref="147" max="-2" attributes="0"/>
-                                  </Group>
-                                  <EmptySpace min="-2" pref="78" max="-2" attributes="0"/>
-                                  <Group type="103" groupAlignment="0" attributes="0">
-                                      <Component id="btnVolverLOG" min="-2" pref="196" max="-2" attributes="0"/>
-                                      <Component id="btnguardar" min="-2" pref="196" max="-2" attributes="0"/>
-                                  </Group>
+                          <Group type="102" attributes="0">
+                              <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                                  <Component id="txtcontra" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="txtusuario1LOG" alignment="0" pref="207" max="32767" attributes="0"/>
+                                  <Component id="LOG" alignment="0" min="-2" pref="147" max="-2" attributes="0"/>
+                              </Group>
+                              <EmptySpace min="-2" pref="78" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="btnVolverLOG" min="-2" pref="196" max="-2" attributes="0"/>
+                                  <Component id="btnguardar" min="-2" pref="196" max="-2" attributes="0"/>
                               </Group>
                           </Group>
-                          <EmptySpace min="-2" pref="428" max="-2" attributes="0"/>
                       </Group>
                   </Group>
+                  <EmptySpace min="-2" pref="428" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
