correcciones de usuario

--- a/ORBITIX/src/main/java/com/mycompany/orbitix/vista/VistaLogin.form
+++ b/ORBITIX/src/main/java/com/mycompany/orbitix/vista/VistaLogin.form
@@ -68,7 +68,7 @@
                                   <Group type="102" alignment="1" attributes="0">
                                       <Group type="103" groupAlignment="1" attributes="0">
                                           <Component id="labelcontrasena" min="-2" pref="147" max="-2" attributes="0"/>
-                                          <Component id="labelusuario" min="-2" pref="147" max="-2" attributes="0"/>
+                                          <Component id="labelcorreo" min="-2" pref="147" max="-2" attributes="0"/>
                                       </Group>
                                       <EmptySpace min="-2" pref="111" max="-2" attributes="0"/>
                                   </Group>
@@ -94,7 +94,7 @@
                   <EmptySpace pref="381" max="32767" attributes="0"/>
                   <Component id="labelIniSE" min="-2" pref="78" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
-                  <Component id="labelusuario" min="-2" pref="35" max="-2" attributes="0"/>
+                  <Component id="labelcorreo" min="-2" pref="35" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="1" attributes="0">
                       <Component id="txtusuario1" min="-2" pref="35" max="-2" attributes="0"/>
@@ -145,7 +145,7 @@
             </Property>
           </Properties>
         </Component>
-        <Component class="javax.swing.JLabel" name="labelusuario">
+        <Component class="javax.swing.JLabel" name="labelcorreo">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="ff" green="0" red="99" type="rgb"/>
@@ -156,7 +156,7 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="                Usuario"/>
+            <Property name="text" type="java.lang.String" value="                Correo"/>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
               <Border info="org.netbeans.modules.form.compat2.border.LineBorderInfo">
                 <LineBorder roundedCorners="true">
