--- a/ORBITIX/src/main/java/com/mycompany/orbitix/vista/VistaRegistroPasajero.form
+++ b/ORBITIX/src/main/java/com/mycompany/orbitix/vista/VistaRegistroPasajero.form
@@ -328,7 +328,7 @@
                   <Connection component="CBEquipaje" type="bean"/>
                 </Property>
                 <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-                  <Color id="Cursor Por defecto"/>
+                  <Color id="Default Cursor"/>
                 </Property>
                 <Property name="doubleBuffered" type="boolean" value="true"/>
               </Properties>
